--- a/app/views/application/desktop/_errors.html.erb
+++ b/app/views/application/desktop/_errors.html.erb
@@ -1,7 +1,7 @@
 <div class="errors">
   <% if @errors.present? -%>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-12">
         <div class="alert alert-danger" role="alert">
           <strong><%= t("#{ controller_name }.desktop.create.error") %></strong>
           <ul>
