--- a/app/views/confirmations/confirm_success.html.erb
+++ b/app/views/confirmations/confirm_success.html.erb
@@ -1,5 +1,5 @@
 
-<div class="page-header" id="headline">
+<div class="" id="headline">
   <h3>
     <% type = t(@request.service.type, scope: 'service.types', count: 1) %>
     <%= type %>
