--- a/app/views/abuses/mobile/_new.html.erb
+++ b/app/views/abuses/mobile/_new.html.erb
@@ -1,28 +1,28 @@
 <div class="abuse">
-  <div class="panel panel-default">
-    <div class="panel-heading">
+  <div class="card">
+    <div class="card-header">
       <%= t('.title') %>
     </div>
-    <div class="panel-body">
+    <div class="card-body">
       <%= form_for([:request, @abuse], remote: true) do |f| %>
         <%= hidden_field_tag :mobile, @mobile %>
-        <div class="row form-group">
-          <div class="col-md-12"><%= t('.hint.text') %></div>
-          <div class="col-md-12"><em class="text-danger"><%= t('.hint.warning_html') %></em></div>
+        <div class="row mb-3">
+          <div class="col-12"><%= t('.hint.text') %></div>
+          <div class="col-12"><em class="text-danger"><%= t('.hint.warning_html') %></em></div>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
           <div class="input-group">
-            <span class="input-group-addon"><span class="glyphicon glyphicon-pencil"></span></span>
+            <span class="input-group-text"><i class="fas fa-pencil-alt"></i></span>
             <%= f.text_area(:comment, rows: 4, class: 'form-control', placeholder: t('placeholder.abuse')) %>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-8">
-            <div class="form-group has-feedback has-clear">
+        <div class="row mb-3">
+          <div class="col-12">
+            <div class="has-clear">
               <div class="input-group">
-                <span class="input-group-addon">@</span>
+                <span class="input-group-text">@</span>
                 <%= f.email_field(:author, class: 'form-control', placeholder: t('placeholder.email')) %>
-                <span class="glyphicon glyphicon-remove-circle form-control-feedback form-control-clear" aria-hidden="true"></span>
+                <i class="far fa-times-circle form-control-clear"></i>
               </div>
             </div>
           </div>
@@ -30,18 +30,16 @@
         <% if display?(:privacy_policy) -%>
           <%= render partial: 'privacy_policy_form', locals: { form: f } %>
         <% else -%>
-          <div class="row form-group">
+          <div class="row mb-3">
             <span class="helper-block">
               <%= t('.hint.privacy_html') %>
             </span>
           </div>
         <% end -%>
-        <div class="col-md-4 form-group">
-          <div class="btn-group btn-group-justified" role="group">
-            <div class="btn-group" role="group">
-              <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
-            </div>
-            <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list, mobile: @mobile], remote: true, class: 'btn btn-default', role: :button) %>
+        <div class="col-12">
+          <div class="btn-group d-flex col-12" role="group">
+            <%= f.submit(t('buttons.submit'), class: 'btn btn-primary col-6') %>
+            <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list, mobile: @mobile], remote: true, class: 'btn btn-light btn-outline-secondary col-6', role: :button) %>
           </div>
           <% @id_list.each do |idl| -%>
             <%= f.hidden_field "id_list][", :value => idl, id: nil %>
