--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
       <header>
         <div class="container">
           <div class="row">
-            <div class="col-md-3 col-sm-2">
+            <div class="col-2">
               <%= image_tag image_path('klarschiff.png'), id: 'logo1' %>
             </div>
-            <div class="col-md-6 col-sm-8 text-center">
+            <div class="col-8 text-center">
               <%= link_to [:root], data: { turbolinks: false } do %>
                 <% logo3_file_path = "#{ Settings::Client.resources_path }logo3.png" %>
                 <% logo3_file_url = "#{ Settings::Client.resources_url }logo3.png" %>
@@ -49,12 +49,12 @@
                 <h1><%= Settings::Client.name %></h1>
               <% end -%>
             </div>
-            <div class="col-md-3 col-sm-2">
-              <%= image_tag Settings::Client.logo_url, id: 'logo2', class: 'img-responsive' %>
+            <div class="col-2">
+              <%= image_tag Settings::Client.logo_url, id: 'logo2', class: 'img-fluid' %>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-5">
+            <div class="col-5">
               <%= yield :nav %>
               <div class="btn-group btn-group-sm textresizer" id="textsizer">
                 <%= link_to '#', class: 'btn btn-sm btn-link', remote: true do %>
@@ -68,7 +68,7 @@
                 <% end -%>
               </div>
             </div>
-            <div class="col-md-7 text-right">
+            <div class="col-7 text-end">
               <%= link_to t(:list), [:requests, :static] %> |
               <%= link_to t(:statistic), [:statistics], data: { turbolinks: false } %> |
               <%= link_to t(:help), [:help, :static] %> |
@@ -107,14 +107,14 @@
         <header>
           <div class="container">
             <div class="row">
-              <div class="col-sm-12 text-center">
-                <%= image_tag image_path('klarschiff.png'), id: 'logo1', class: 'pull-left' %>
-                <%= image_tag Settings::Client.logo_url, id: 'logo2', class: 'pull-right' %>
+              <div class="col-12 text-center">
+                <%= image_tag image_path('klarschiff.png'), id: 'logo1', class: 'float-start' %>
+                <%= image_tag Settings::Client.logo_url, id: 'logo2', class: 'float-end' %>
                 <%= link_to [:root], data: { turbolinks: false } do %>
                   <% logo3_file_path = "#{ Settings::Client.resources_path }logo3.png" %>
                   <% logo3_file_url = "#{ Settings::Client.resources_url }logo3.png" %>
                   <%= image_tag(logo3_file_url, id: :logo3) if File.exist?(logo3_file_path) %>
-                  <h1><%= Settings::Client.name %></h1>
+                  <h1 class="mt-3"><%= Settings::Client.name %></h1>
                 <% end -%>
               </div>
             </div>
