--- a/app/views/requests/_edit.html.erb
+++ b/app/views/requests/_edit.html.erb
@@ -1,7 +1,7 @@
 <div class="request">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+  <div class="card">
+    <div class="card-header">
+      <h4 class="card-title">
         <%= image_tag(image_path(@request.icon_list), alt: "#{ @request.service.type }, #{ @request.extended_attributes.detailed_status }") %>
         <%= @request.service.type.humanize %>
         #<%= @request.id %>
@@ -12,70 +12,70 @@
         <% end -%>
       </h4>
     </div>
-    <div class="panel-body">
+    <div class="card-body">
       <%= form_for(@request, remote: true, authenticity_token: true, html: { class: 'form-horizontal fileupload' }) do |f| %>
         <%= hidden_field_tag :mobile, @mobile %>
         <div class="form-group">
-          <label for="request_category" class="col-md-2 control-label"><%= Service.human_attribute_name(:group) %></label>
-          <div class="col-md-10">
+          <label for="request_category" class="col-form-label"><%= Service.human_attribute_name(:group) %></label>
+          <div class="col-12">
             <%= select_tag(:request_category, categories(@request.service.type, @request.service.group), 
                            class: 'form-control', data: { update: :request_service_code }) %>
           </div>
         </div>
         <div class="form-group">
-          <%= f.label(:service_code, Service.human_attribute_name(:service_name), class: 'col-md-2 control-label') %>
-          <div class="col-md-10">
-            <%= f.select(:service_code, services(@request.service.group), {}, class: 'form-control',
+          <%= f.label(:service_code, Service.human_attribute_name(:service_name), class: 'col-form-label') %>
+          <div class="col-12">
+            <%= f.select(:service_code, services(@request.service.group), {}, class: 'form-select',
                          data: { src: services_path(type: @request.service.type),
                            placeholder: t('placeholder.select.service') }) %>
           </div>
         </div>
         <% if display?(:email) -%>
           <div class="form-group">
-            <%= f.label(:email, Request.human_attribute_name(:email), class: 'col-md-2 control-label') %>
-            <div class="col-md-10">
+            <%= f.label(:email, Request.human_attribute_name(:email), class: 'col-form-label') %>
+            <div class="col-12">
               <%= f.email_field(:email, class: 'form-control') %>
             </div>
           </div>
         <% end -%>
         <div class="form-group">
-          <%= f.label(:detailed_status, Request.human_attribute_name(:status), class: 'col-md-2 control-label') %>
-          <div class="col-md-10">
-            <%= f.select(:detailed_status, statuses(@request), {}, class: 'form-control') %>
+          <%= f.label(:detailed_status, Request.human_attribute_name(:status), class: 'col-form-label') %>
+          <div class="col-12">
+            <%= f.select(:detailed_status, statuses(@request), {}, class: 'form-select') %>
           </div>
         </div>
         <div class="form-group">
-          <%= f.label(:description, Request.human_attribute_name(:description), class: 'col-md-2 control-label') %>
-          <div class="col-md-10">
+          <%= f.label(:description, Request.human_attribute_name(:description), class: 'col-form-label') %>
+          <div class="col-12">
             <%= f.text_area(:description, rows: 5, class: 'form-control', disabled: !@request.description_public) %>
           </div>
         </div>
         <div class="form-group">
-          <%= f.label(:media, Request.human_attribute_name(:media), class: 'col-md-2 control-label') %>
-          <div class="col-md-10">
+          <%= f.label(:media, Request.human_attribute_name(:media), class: 'col-form-label') %>
+          <div class="col-12">
             <%= f.file_field(:media, multiple: false, accept: 'image/png,image/jpeg') %>
           </div>
         </div>
-        <div class="form-group">
-          <%= f.label(:position, Request.human_attribute_name(:position), class: 'col-md-2 control-label') %>
-          <div class="col-md-2">
-            <%= f.text_field(:lat, readonly: true) %>
-          </div>
-          <div class="col-md-2">
-            <%= f.text_field(:long, readonly: true) %>
-          </div>
-          <div class="col-md-6">
-              <%= link_to('Ändern', '#', class: 'btn btn-default update-position', role: :button) %>
+        <div class="form-group mb-3">
+          <%= f.label(:position, Request.human_attribute_name(:position), class: 'col-form-label') %>
+          <div class="row">
+            <div class="col-3">
+              <%= f.text_field :lat, readonly: true, class: 'form-control' %>
+            </div>
+            <div class="col-3">
+              <%= f.text_field :long, readonly: true, class: 'form-control' %>
+            </div>
+            <div class="col-6">
+              <%= link_to 'Ändern', '#', class: 'btn btn-light btn-outline-secondary update-position', role: :button %>
               auf aktuelle (GPS-)Position des Geräts
+            </div>
           </div>
         </div>
         <div class="form-group">
-          <div class="col-md-offset-2 col-md-10">
-            <div class="btn-group btn-group-justified" role="group">
-              <div class="btn-group" role="group">
-                <%= f.submit(t('buttons.save'), class: 'btn btn-default btn-primary') %>
-              </div>
-              <%= link_to(t('buttons.cancel'), request_path(@request, id_list: @id_list, mobile: @mobile), remote: true, class: 'btn btn-default', role: :button) %>
+          <div class="col-offset-2 col-12">
+            <div class="btn-group d-flex col-12" role="group">
+              <%= f.submit(t('buttons.save'), class: 'btn btn-primary col-6') %>
+              <%= link_to(t('buttons.cancel'), request_path(@request, id_list: @id_list, mobile: @mobile), remote: true, class: 'btn btn-light btn-outline-secondary col-6', role: :button) %>
             </div>
             <% @id_list.each do |idl| -%>
               <%= f.hidden_field "id_list][", :value => idl, id: nil %>
