--- a/app/views/requests/mobile/_nav_buttons.html.erb
+++ b/app/views/requests/mobile/_nav_buttons.html.erb
@@ -1,14 +1,14 @@
-<div class="navbar navbar-default navbar-fixed-bottom actions">
+<div class="navbar navbar-expand-sm navbar-light bg-light fixed-bottom actions">
   <div class="container">
-    <div class="btn-group btn-group-justified" role="group">
-      <%= link_to('#', class: "btn btn-default btn-continue back#{' disabled' if back.blank?}", role: :button, data: { current: current, next: back }) do %>
-        <span class="glyphicon glyphicon-backward"></span>
+    <div class="btn-group d-flex col-12" role="group">
+      <%= link_to('#', class: "btn btn-light btn-outline-secondary btn-continue back#{' disabled' if back.blank?} col-4", role: :button, data: { current: current, next: back }) do %>
+        <i class="fas fa-backward"></i>
       <% end -%>
-      <div class="btn btn-default">
+      <div class="btn btn-light btn-outline-secondary col-4">
         <span><strong><%= text %> <%= step %></strong></span>
       </div>
-      <%= link_to('#', class: "btn btn-default btn-continue #{' disabled' if nxt.blank?}", role: :button, data: { current: current, next: nxt }) do %>
-        <span class="glyphicon glyphicon-forward"></span>
+      <%= link_to('#', class: "btn btn-light btn-outline-secondary btn-continue #{' disabled' if nxt.blank?} col-4", role: :button, data: { current: current, next: nxt }) do %>
+        <i class="fas fa-forward"></i>
       <% end -%>
     </div>
   </div>
